Fixed status tracker being too big

--- a/sendika-app/src/assets/css/utilities/_variables.scss
+++ b/sendika-app/src/assets/css/utilities/_variables.scss
@@ -5,7 +5,7 @@ $primary_color: #3AAFA9;
 $inactive_color: #AEC7C5;
 $text-white: #FEFFFF;
 $text-black: #17252A;
-$grey: #1f2525;
+$grey: #DEF2F1;
 $teal: #2B7A78;
 
 $roboto: 'Roboto', sans-serif;
